# birina

./: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
src/app/: config.ts  globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/check-gamusa/: route.ts
src/app/api/upload-metadata/: route.ts
src/app/mint/: page.tsx
src/app/verify/: page.tsx
src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Spinner.tsx
src/lib/: contract.ts
src/xion-nft-contract/: Cargo.toml
src/xion-nft-contract/artifacts/: checksums.txt  checksums_intermediate.txt
src/xion-nft-contract/src/contract/: nft_contract.wasm
