[package]
name = "xion-nft-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.3.0"
cosmwasm-std = "1.3.0"
cosmwasm-storage = "1.3.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
schemars = "0.8.12"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
cw-multi-test = "0.18.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true